# pytest-postgresql

./: .coderabbit.yaml  .coveragerc  .pre-commit-config.yaml  CHANGES.rst  CONTRIBUTING.rst  Pipfile  README.rst  pyproject.oldest.toml  pyproject.toml
.github/: dependabot.yml
.github/actions/detect-pg-ctl/: action.yml
.github/workflows/: async-postgres.yml  automerge.yml  build.yml  diagram.yml  dockerised-postgres.yml  oldest-postgres.yml  pr-check.yml  pre-commit.yml  pypi.yml  release.yml  single-postgres-windows.yml  single-postgres.yml  tests.yml
docs/: architecture.mmd  architecture_async.mmd  architecture_chaining.mmd
newsfragments/: +0d5d4cb5.misc.rst  +3cf1375f.docs.rst  +3d7c1dfd.misc.rst  +3f45d2d2.bugfix.rst  +41973b70.misc.rst  +4593101b.misc.rst  +53da9cae.misc.rst  +56cec843.docs.rst  +6028688d.break.rst  +6bd45c53.misc.rst  +6e2cf3ce.misc.rst  +831f24cb.misc.rst  +8bf3ab6b.bugfix.rst  +910e271c.feature.rst  +9152f59e.misc.rst  +a216cec3.misc.rst  +a84dfbc9.misc.rst  +ba8eaaf7.misc.rst  +bda84735.misc.rst  +dedupe-janitor.misc.rst  +deflake-terminate-connection.misc.rst  +pipfile-editable.misc.rst  +zizmor.misc.rst  1115.bugfix.rst  1131.bugfix.rst  1148.bugfix.rst  1182.feature.rst  1225.feature.rst  1233.docs.rst  1235.feature.rst  1244.docs.rst  1250.break.rst  1295.bugfix.rst  1331.misc.rst  890.break.1.rst  890.break.rst  890.docs.rst  890.feature.rst
oldest/: requirements.rq  requirements.txt
pytest_postgresql/: __init__.py  _asyncio_compat.py  config.py  executor.py  executor_noop.py  janitor.py  loader.py  plugin.py  retry.py  types.py
pytest_postgresql/factories/: __init__.py  client.py  noprocess.py  process.py
tests/: conftest.py  test_executor.py  test_factory_errors.py  test_janitor.py  test_loader.py  test_plugin_asyncio.py  test_postgres_options_plugin.py  test_postgresql.py  test_retry.py  test_template_database.py  test_windows_compatibility.py
tests/docker/: test_noproc_docker.py
tests/examples/: test_assert_port_search_count_is_ten.py  test_drop_test_database_async.py  test_postgresql_async_windows_smoke.py
