[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61.0.0" ]

[project]
name = "pytest-postgresql"
version = "8.1.0"
description = "Postgresql fixtures and fixture factories for Pytest."
readme = "README.rst"
keywords = [ "fixture", "postgresql", "pytest", "tests" ]
license = { file = "COPYING.lesser" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = [ "mirakuru>=2.6.0", "packaging", "port-for>=0.7.3", "psycopg>=3.0.0", "pytest>=8.2" ]

[[project.authors]]
name = "Grzegorz Śliwiński"
email = "fizyk+pypi@fizyk.dev"

[project.entry-points.pytest11]
pytest_postgresql = "pytest_postgresql.plugin"

[project.optional-dependencies]
async = [ "aiofiles>=23.0", "pytest-asyncio>=1.4" ]

[project.urls]
Source = "https://github.com/dbfixtures/pytest-postgresql"
"Bug Tracker" = "https://github.com/dbfixtures/pytest-postgresql/issues"
Changelog = "https://github.com/dbfixtures/pytest-postgresql/blob/v8.1.0/CHANGES.rst"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = [ "pytest_postgresql*" ]
exclude = [ "tests*" ]
namespaces = false

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "D", # pydocstyle
]

[tool.pyproject-fmt]
column_width = 120
indent = 4
keep_full_version = true
generate_python_version_classifiers = false
table_format = "long"
sub_table_spacing = "\n"

[tool.mypy]
ignore_missing_imports = false
follow_imports = "silent"
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = false
strict_equality = true
pretty = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest]
addopts = [ "--showlocals", "--verbose" ]
norecursedirs = [ "examples" ]
pytester_example_dir = "tests/examples"
strict_xfail = true
testpaths = [ "tests" ]

[[tool.tbump.before_commit]]
name = "Build changelog"
cmd = "pipenv run towncrier build --version {new_version} --yes"

[[tool.tbump.field]]
name = "extra"
default = ""

[[tool.tbump.file]]
src = "pytest_postgresql/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'Changelog = "https://github.com/dbfixtures/pytest-postgresql/blob/v{current_version}/CHANGES.rst"'

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "8.1.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[tool.towncrier]
directory = "newsfragments"
filename = "CHANGES.rst"
issue_format = "`#{issue} <https://github.com/dbfixtures/pytest-postgresql/issues/{issue}>`__"
single_file = true

[[tool.towncrier.type]]
directory = "break"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "depr"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true

[tool.rstcheck]
report_level = "warning"
